Some crazy CSS to fix map strip images on mobile and small screen thumbnails in IE7/8.

--- a/app/assets/stylesheets/map.sass
+++ b/app/assets/stylesheets/map.sass
@@ -132,6 +132,8 @@ div.thumbs_strip
   display: none
   width: 100%
   background-color: #fff
+  // should be more than nav.translated
+  z-index: 1001
   border:
     top: 1px dashed #333333
 
@@ -167,7 +169,7 @@ div.thumbs_strip
   box-shadow: 5px 5px 10px 0px rgb(0, 0, 0)
   position: absolute
   left: 105px
-  z-index: 9999
+  z-index: 999
 
   background-color: #ffffcd
   padding: 5px 5px
@@ -180,7 +182,7 @@ div.thumbs_strip
   border-top: 0px none
   position: absolute
   left: 410px
-  z-index: 9999
+  z-index: 999
   margin-top: 5px
 
 .gray-panel
